# aws-logs

./: .gitignore  Dockerfile  LICENSE  Main.hs  Makefile  README.md  aws-logs  aws-logs.cabal  install  stack.yaml
src/: App.hs  Args.hs  Main.hs  OutputPrinter.hs  TimeUtil.hs
