name:                aws-logs
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/aws-logs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable aws-logs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7
                     , aeson
                     , amazonka >= 1.3.3.1
                     , amazonka-core >= 1.3.3.1
                     , amazonka-cloudwatch-logs >= 1.3.3.1
                     , bytestring
                     , conduit
                     , conduit-extra
                     , lens
                     , optparse-applicative
                     , old-locale
                     , resourcet
                     , semigroups
                     , time
                     , text
                     , transformers

  ghc-options:       -Wall -fno-warn-orphans -threaded -rtsopts -with-rtsopts=-N -O2
