name:                aws-logs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/andreyk0/aws-logs#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          andrey.kartashov@google.com
copyright:           Copyright: (c) 2016 Andrey Kartashov
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable aws-logs
  hs-source-dirs:      src

  main-is:             Main.hs

  other-modules:       Args
                       App
                       OutputPrinter
                       TimeUtil

  build-depends:       base
                     , aeson
                     , amazonka
                     , amazonka-cloudwatch-logs
                     , amazonka-core
                     , ansi-wl-pprint
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , exceptions
                     , gitrev
                     , lens
                     , monad-control
                     , monad-logger
                     , monad-loops
                     , mtl
                     , old-locale
                     , optparse-applicative
                     , parse-time
                     , resourcet
                     , semigroups
                     , text
                     , time
                     , transformers
                     , transformers-base
                     , utf8-string


  default-language:    Haskell2010

  ghc-options:         -Wall -Wno-orphans -threaded -rtsopts -O2
